Updated colors of the homepage and about section. Updated header welcome. It's all rose-colored now.

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
           </nav>
           <section class="intro">
               <div id="container">
-                <p>My name is Gulbahar &#8212; call me G for short or Rose for translation.
-                <p>Made in NY, student at SDA Bocconi in Milano.
+                <p>My name is Gulbahar &#8212; call me <i>G</i> for short or <i>Rose</i> for translation.
+                <p>Made in NY, studying in Milano.
                 <p>
                 <a href="/images/about/okuyanresume.pdf" download><button>resume</button></a>
               </div>
@@ -113,7 +113,7 @@
           </section>
           <section id="contact">
               <div class="contact-text" id="container">
-                  <h2>&darr; If you'd like to get in touch.</h2>
+                  <h2>&darr; Get in touch.</h2>
               </div>
               <div class="clearfix"></div>
 
