--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link rel="stylesheet" type="text/css" href="styles/landing.css">
       <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700i|Poppins:400,400i,800,800i" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700i|Poppins:300,400,400i,800,800i" rel="stylesheet">
       <script src="javascript/script.js"></script>
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120968085-1"></script>
@@ -37,12 +37,18 @@
                 <!--  <a href="img.html">images </a>-->
               </nav>
               <section class="hero">
-                <div id="container">
-                  <h2>Gulbahar Okuyan-Waugh</h2>
-                  <h1>Strategist & Business Developer</h1>
-                  <p>An American in Milan. MBA student at <a href="https://www.sdabocconi.it/en/mba-executive-mba/full-time-mba">SDA Bocconi</a>.</p>
+                <div class="hero-text" id="container">
+                  <h2>Ciao, call me <r>Rose</r>.</h2>
+                  <p>
+                  <h1>Strategist <r>&</r> Business Developer</h1>
+                  <p>
+                  <p>Based in Milan, I’m studying business in the city of design.
+                    Creative by nature, business strategist & developer by training.
+                    I enjoy helping companies & governments find solutions to better
+                    serve their customers or constituents.</p>
+                  <p>
                   <a data scroll href="#projects" alt="projects">
-                      <i class="far fa-arrow-alt-circle-down" style="font-size:30px; color:white;"></i></a>
+                      <i class="far fa-arrow-alt-circle-down" style="font-size:30px; color:#E44B4B;"></i></a>
                       <!--div id="intro">
                           <h5>Hi, my name is <b>Gulbahar</b> - call me G for short or Rose
                           for translation. I’m a <b>strategist & business developer</b> with ux and web development skills.
@@ -62,8 +68,8 @@
           <section id="projects">
               <div id="container">
 
-                  <div class="section">
-                      <div id="color">project design/social innovation</div>
+                  <div class="section" style="background: #e34a4b; color: white;">
+                      <h2 style="padding-bottom:2rem;">8+ years’ in social innovation & nonprofit project design</h2>
                       <p>
                       <div class="clearfix"></div>
                       <div class="project-1">
@@ -71,17 +77,17 @@
                               <div class="clearfix"></div>
                       </div>
                       <div class="project-2">
-                          <p>Combining technology & education to reach the underserved in Haiti.
-                          <p>Client: USAID/Haiti
-                          <p>Dates: 2015-2017
-                          <p><i>While working at <a href="http://www.woccu.org/programs/approach">WOCCU</a>.</i>
-                          <p>
+                              <p>Combining technology & education to reach the underserved in Haiti.
+                              <p>Client: USAID/Haiti
+                              <p>Dates: 2015-2017
+                              <p><i>While working at <a href="http://www.woccu.org/programs/approach">WOCCU</a>.</i>
+                              <p>
                           <a href="images/case-haiti.pdf"><button>see case study</button></a>
                       </div>
                       <div class="clearfix"></div>
                   </div>
                   <div class="section">
-                      <div id="color">ux design/branding & web design</div>
+                      <h2 style="padding-bottom:2rem;">+ ux & human-centered design bootcamp & workshops</h2>
                       <p>
                       <div class="clearfix"></div>
                       <div class="project-1">
@@ -98,7 +104,6 @@
                       <div class="clearfix"></div>
                   </div>
                   <div class="section">
-                      <div id="color">ux design/re-branding & web design</div>
                       <p>
                       <div class="clearfix"></div>
                       <div class="project-1">
@@ -120,7 +125,7 @@
 
           <section id="contact">
               <div class="contact-text">
-                  <h2>&darr; If you'd like to get in touch.</h2>
+                  <h2>Say ciao! I'm available for freelance work & Milan recommendations.</h2>
               </div>
               <div class="clearfix"></div>
           </section>
