Header and nav for the rose design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                       <div class="clearfix"></div>
                       <li><a data scroll href="#projects">work</a></li>
-                      <li><a href="about.html">about</a></li>
+                      <li><a href="home.html">about</a></li>
                       <li><a href="mailto:gokuyan@gmail.com">email</a></li>
                       </a>
                   </ul>
