first draft of ottoman rose portfolio landing page

--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
   </head>
 
   <body>
+      <!--img src="images/ottoman-rose.png"-->
       <header>
             <nav>
                 <a href="home.html" class="logo"><h3>gulbahar</h3></a>
@@ -31,10 +32,10 @@
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
                             <li><a data scroll href="#projects">WORK</a></li>
-                            <li><a data scroll href="#about">ABOUT</a></li>
                             <li><a data scroll href="#services">SERVICES</a></li>
-                            <li><a data scroll href="#tools">TOOLS & DOODLES</a></li>
-                            <!--li><a href="mailto:gokuyan@gmail.com">EMAIL</a></li-->
+                            <li><a data scroll href="#about">ABOUT</a></li>
+                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
+                            <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
                 <div class="clearfix"></div>
@@ -43,15 +44,131 @@
 
             <section class="hero">
               <div class="clearfix"></div>
-
-                <div class="hero">
                     <!--h3 class="same-line">I'm a</h3--> <h1>Business Designer & Developer...</h1>
                     <h3 id="container">with an MBA, Innovation Certificate, and Design training. I
                       have 8+ years’ experience designing & writing proposals and
                       managing cross-functional teams. Now, I’m freelancing in design
                       ops, business design, and marketing.</h3>
-                </div>
                 <div class="clearfix"></div>
             </section>
       </header>
+      <main>
+          <section class="projects" id="projects">
+              <div class="left-haiti">
+                  <div class="left-text">
+                      <h2>Social Innovation</h2>
+                      <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
+                        financial inclusion in rural areas in Haiti.</h3>
+                      <a href="images/case-haiti.pdf"><h4>Learn more.</h4></a>
+                  </div>
+                  <div class="left-img">
+                      <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
+                  </div>
+              </div>
+              <div class="right">
+                  <a href="rfs.html" class="rfs-image"><img src="images/rfs-etsy.png"></a>
+                  <div class="right-text">
+                      <h2>Brand Identity</h2>
+                      <h3 id="project-desc">Designing the brand & website for a small
+                        business in Washington, DC</h3>
+                      <a href="rfs.html"><h4>Learn more.</h4></a>
+                  </div>
+              </div>
+              <div class="left-coop">
+                  <div class="left-text">
+                      <h2>Website Redesign</h2>
+                      <h3 id="project-desc">Creating a brand and website from
+                        scratch. This was part of the Design bootcamp with Bloc.io.</h3>
+                      <a href="coop.html"><h4>Learn more.</h4></a>
+                  </div>
+                  <a href="coop.html"><img src="images/coop/coop-home.png"></a>
+          </section>
+          <section class="services" id="services">
+              <h1>Services</h1>
+              <div class="services-wrap">
+                  <div class="half-left" id="list-color">
+                      <h2>Business Development</h2>
+                      <h3>8+ years of experience in...</h3>
+                      <ul class="service-list">
+                          <li><h3>Partnership Development</h3></li>
+                          <li><h3>Strategy</h3></li>
+                          <li><h3>Marketing</h3></li>
+                          <li><h3>Proposal Writing</h3></li>
+                          <li><h3>Project Development</h3></li>
+                          <li><h3>Cross-functional Team Management</h4></li>
+                          <li><h3>Mentorship & Training</h3></li>
+                      </ul>
+                  </div>
+                  <div class="half-right" id="list-color">
+                      <h2>Business Design & Design Ops</h2>
+                      <h3>Experience designing & developing</h3>
+                      <ul class="service-list">
+                          <li><h3>Tools (project design & processes)</h3></li>
+                          <li><h3>Processes</h3></li>
+                          <li><h3>Forms (internal operations)</h3></li>
+                          <li><h3>Surveys</h3></li>
+                          <li><h3>A/B Tests</h3></li>
+                          <li><h3>Financial Projections</h3></li>
+                          <li><h3>Websites (UX, UI, front-end)</h3></li>
+                      </ul>
+                  </div>
+              </div>
+          </section>
+          <section class="about" id="about">
+              <div class="half-left">
+                  <h1>Business designer & developer shuffling between NYC & DC.</h1>
+                  <h3>My name is Gulbahar Okuyan, but call me Rose. </h3>
+                  <h3>Born to a Turkistan-American family, I have always been
+                    surrounded by rich, competing cultures. I grew up in Brooklyn
+                    and NJ to a mixture of nomadic ancestry, with farmer and
+                    engineer grandparents, and an architect/ framer father and
+                    artistic mother. All their traits rubbed off on me. I have
+                    lived in 3 countries and traveled to more than 25. And am
+                    constantly redecorating or moving apartments. I enjoy change
+                    and trying new things.</h3>
+                  <img src="images/translation.png">
+              </div>
+              <div class="half-right">
+                  <img src="images/face.png">
+                  <h3>Career-wise, I’ve always gravitated towards challenging
+                    roles in resource-poor environments, whether it’s a very
+                    small company/ team or in a developing country. I started
+                    my career managing international monitoring & evaluation
+                    projects then moved more into business development roles
+                    because I enjoyed designing and creating the projects. At
+                    each company transition, I would take on more responsibility,
+                    and thus gain more insight into company operations. This is
+                    when I started taking extra work in design ops and created
+                    manuals, tools, and forms for business development and
+                    internal operations.</h3>
+                  <h3>To further develop my skills in my interests, I signed up
+                    for a design bootcamp then enrolled into an MBA program in
+                    Italy. Now, I’m open for freelance or full-time opportunities
+                    in business development, business design, and/or design ops.</h3>
+              </div>
+          </section>
+      </main>
+      <footer>
+          <div class="contact" id="contact">
+              <div class="contact-container">
+                  <div class="half-left">
+                      <ul class="icons">
+                            <li><h4>Let's chat.</h4></li>
+                            <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                                <i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                            <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                                <i class="fas fa-envelope"></i></a>
+                            </li>
+                            <li><a href="https://github.com/okleyla" alt="github">
+                                <i class="fab fa-github"></i></a>
+                            </li>
+                      </ul>
+                  </div>
+                  <div class="half-right">
+                      <p>content and design &copy 2019 Gulbahar Okuyan-Waugh</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
   </body>
