--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                       <li><a data scroll href="#projects">work</a></li>
                       <li><a href="about.html">about</a></li>
                       <li><a href="mailto:gokuyan@gmail.com">email</a></li>
+                      <li><a href="home.html" style="color: white;">|</a></li>
                       </a>
                   </ul>
                   <div class="clearfix"></div>
