Final-ish desktop version of landing page

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-      <!--img src="images/ottoman-rose.png"-->
+      <div class="bg-img"><img src="images/ottoman-rose.png"></div>
       <header>
             <nav>
                 <a href="home.html" class="logo"><h3>gulbahar</h3></a>
@@ -38,23 +38,19 @@
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
-                <div class="clearfix"></div>
             </nav>
-            <div class="clearfix"></div>
-
             <section class="hero">
-              <div class="clearfix"></div>
-                    <!--h3 class="same-line">I'm a</h3--> <h1>Business Designer & Developer...</h1>
-                    <h3 id="container">with an MBA, Innovation Certificate, and Design training. I
+                    <h1>Business Designer & Developer...</h1>
+                    <h3 class="half-left" style="padding: 0;">with an MBA, Innovation Certificate, and Design training. I
                       have 8+ years’ experience designing & writing proposals and
                       managing cross-functional teams. Now, I’m freelancing in design
                       ops, business design, and marketing.</h3>
-                <div class="clearfix"></div>
             </section>
       </header>
       <main>
           <section class="projects" id="projects">
-              <div class="left-haiti">
+            <div class="clearfix"></div>
+              <div class="left">
                   <div class="left-text">
                       <h2>Social Innovation</h2>
                       <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
@@ -74,7 +70,7 @@
                       <a href="rfs.html"><h4>Learn more.</h4></a>
                   </div>
               </div>
-              <div class="left-coop">
+              <div class="left">
                   <div class="left-text">
                       <h2>Website Redesign</h2>
                       <h3 id="project-desc">Creating a brand and website from
@@ -85,34 +81,34 @@
           </section>
           <section class="services" id="services">
               <h1>Services</h1>
-              <div class="services-wrap">
-                  <div class="half-left" id="list-color">
-                      <h2>Business Development</h2>
-                      <h3>8+ years of experience in...</h3>
-                      <ul class="service-list">
-                          <li><h3>Partnership Development</h3></li>
-                          <li><h3>Strategy</h3></li>
-                          <li><h3>Marketing</h3></li>
-                          <li><h3>Proposal Writing</h3></li>
-                          <li><h3>Project Development</h3></li>
-                          <li><h3>Cross-functional Team Management</h4></li>
-                          <li><h3>Mentorship & Training</h3></li>
-                      </ul>
+                  <div class="services-wrap">
+                      <div class="half-left" id="list-color">
+                          <h2>Business Development</h2>
+                          <h3>8+ years of experience in...</h3>
+                          <ul class="service-list">
+                              <li><h3>Partnership Development</h3></li>
+                              <li><h3>Strategy</h3></li>
+                              <li><h3>Marketing</h3></li>
+                              <li><h3>Proposal Writing</h3></li>
+                              <li><h3>Project Development</h3></li>
+                              <li><h3>Cross-functional Team Management</h4></li>
+                              <li><h3>Mentorship & Training</h3></li>
+                          </ul>
+                      </div>
+                      <div class="half-right" id="list-color">
+                          <h2>Business Design & Design Ops</h2>
+                          <h3>Experience designing & developing</h3>
+                          <ul class="service-list">
+                              <li><h3>Tools (project design & processes)</h3></li>
+                              <li><h3>Processes</h3></li>
+                              <li><h3>Forms (internal operations)</h3></li>
+                              <li><h3>Surveys</h3></li>
+                              <li><h3>A/B Tests</h3></li>
+                              <li><h3>Financial Projections</h3></li>
+                              <li><h3>Websites (UX, UI, front-end)</h3></li>
+                          </ul>
+                      </div>
                   </div>
-                  <div class="half-right" id="list-color">
-                      <h2>Business Design & Design Ops</h2>
-                      <h3>Experience designing & developing</h3>
-                      <ul class="service-list">
-                          <li><h3>Tools (project design & processes)</h3></li>
-                          <li><h3>Processes</h3></li>
-                          <li><h3>Forms (internal operations)</h3></li>
-                          <li><h3>Surveys</h3></li>
-                          <li><h3>A/B Tests</h3></li>
-                          <li><h3>Financial Projections</h3></li>
-                          <li><h3>Websites (UX, UI, front-end)</h3></li>
-                      </ul>
-                  </div>
-              </div>
           </section>
           <section class="about" id="about">
               <div class="half-left">
