updated responsiveness with overflow auto. nav bar still not showing on mobile queries

--- a/home.html
+++ b/home.html
@@ -40,11 +40,13 @@
                     </ul>
             </nav>
             <section class="hero">
+                <div class="hero-text">
                     <h1>Business Designer & Developer...</h1>
                     <h3 class="half-left" style="padding: 0;">with an MBA, Innovation Certificate, and Design training. I
                       have 8+ years’ experience designing & writing proposals and
                       managing cross-functional teams. Now, I’m freelancing in design
                       ops, business design, and marketing.</h3>
+                <div class="hero">
             </section>
       </header>
       <main>
@@ -80,51 +82,54 @@
                   <a href="coop.html"><img src="images/coop/coop-home.png"></a>
           </section>
           <section class="services" id="services">
-              <h1>Services</h1>
+              <div class="services-text">
+                  <h1>Services</h1>
                   <div class="services-wrap">
-                      <div class="half-left" id="list-color">
-                          <h2>Business Development</h2>
-                          <h3>8+ years of experience in...</h3>
-                          <ul class="service-list">
-                              <li><h3>Partnership Development</h3></li>
-                              <li><h3>Strategy</h3></li>
-                              <li><h3>Marketing</h3></li>
-                              <li><h3>Proposal Writing</h3></li>
-                              <li><h3>Project Development</h3></li>
-                              <li><h3>Cross-functional Team Management</h4></li>
-                              <li><h3>Mentorship & Training</h3></li>
-                          </ul>
-                      </div>
-                      <div class="half-right" id="list-color">
-                          <h2>Business Design & Design Ops</h2>
-                          <h3>Experience designing & developing</h3>
-                          <ul class="service-list">
-                              <li><h3>Tools (project design & processes)</h3></li>
-                              <li><h3>Processes</h3></li>
-                              <li><h3>Forms (internal operations)</h3></li>
-                              <li><h3>Surveys</h3></li>
-                              <li><h3>A/B Tests</h3></li>
-                              <li><h3>Financial Projections</h3></li>
-                              <li><h3>Websites (UX, UI, front-end)</h3></li>
-                          </ul>
-                      </div>
+                          <div class="half-left" id="list-color">
+                              <h2>Business Development</h2>
+                              <h3>8+ years of experience in...</h3>
+                              <ul class="service-list">
+                                  <li><h3>Partnership Development</h3></li>
+                                  <li><h3>Strategy</h3></li>
+                                  <li><h3>Marketing</h3></li>
+                                  <li><h3>Proposal Writing</h3></li>
+                                  <li><h3>Project Development</h3></li>
+                                  <li><h3>Cross-functional Team Management</h4></li>
+                                  <li><h3>Mentorship & Training</h3></li>
+                              </ul>
+                          </div>
+                          <div class="half-right" id="list-color">
+                              <h2>Business Design & Design Ops</h2>
+                              <h3>Experience designing & developing</h3>
+                              <ul class="service-list">
+                                  <li><h3>Tools (project design & processes)</h3></li>
+                                  <li><h3>Processes</h3></li>
+                                  <li><h3>Forms (internal operations)</h3></li>
+                                  <li><h3>Surveys</h3></li>
+                                  <li><h3>A/B Tests</h3></li>
+                                  <li><h3>Financial Projections</h3></li>
+                                  <li><h3>Websites (UX, UI, front-end)</h3></li>
+                              </ul>
+                          </div>
                   </div>
+              </div>
           </section>
           <section class="about" id="about">
-              <div class="half-left">
-                  <h1>Business designer & developer shuffling between NYC & DC.</h1>
-                  <h3>My name is Gulbahar Okuyan, but call me Rose. </h3>
-                  <h3>Born to a Turkistan-American family, I have always been
-                    surrounded by rich, competing cultures. I grew up in Brooklyn
-                    and NJ to a mixture of nomadic ancestry, with farmer and
-                    engineer grandparents, and an architect/ framer father and
-                    artistic mother. All their traits rubbed off on me. I have
-                    lived in 3 countries and traveled to more than 25. And am
-                    constantly redecorating or moving apartments. I enjoy change
-                    and trying new things.</h3>
-                  <img src="images/translation.png">
-              </div>
-              <div class="half-right">
+              <div class="about-text">
+                  <div class="half-left">
+                      <h1>Business designer & developer shuffling between NYC & DC.</h1>
+                      <h3>My name is Gulbahar Okuyan, but call me Rose. </h3>
+                      <h3>Born to a Turkistan-American family, I have always been
+                        surrounded by rich, competing cultures. I grew up in Brooklyn
+                        and NJ to a mixture of nomadic ancestry, with farmer and
+                        engineer grandparents, and an architect/ framer father and
+                        artistic mother. All their traits rubbed off on me. I have
+                        lived in 3 countries and traveled to more than 25. And am
+                        constantly redecorating or moving apartments. I enjoy change
+                        and trying new things.</h3>
+                      <img src="images/translation.png">
+                  </div>
+                  <div class="half-right">
                   <img src="images/face.png">
                   <h3>Career-wise, I’ve always gravitated towards challenging
                     roles in resource-poor environments, whether it’s a very
@@ -141,6 +146,7 @@
                     for a design bootcamp then enrolled into an MBA program in
                     Italy. Now, I’m open for freelance or full-time opportunities
                     in business development, business design, and/or design ops.</h3>
+              </div>
               </div>
           </section>
       </main>
@@ -168,3 +174,4 @@
           </div>
       </footer>
   </body>
+</html>
