--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Gulbahar Okuyan</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/normalize.css">
@@ -28,13 +28,13 @@
                 <a href="home.html" class="logo"><h3>gulbahar</h3></a>
                 <ul class="nav-bar" id="topnav">
                       <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
-                            <i class="fa fa-bars"></i>
+                            <i class="fas fa-bars"></i>
                             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                             <div class="clearfix"></div>
                             <li><a data scroll href="#projects">WORK</a></li>
                             <li><a data scroll href="#services">SERVICES</a></li>
                             <li><a data scroll href="#about">ABOUT</a></li>
-                            <li><a href="tools.html">TOOLS & DOODLES</a></li>
+                            <!--li><a href="tools.html">TOOLS & DOODLES</a></li-->
                             <li><a data scroll href="#contact">CONTACT</a></li>
                       </a>
                     </ul>
@@ -52,12 +52,12 @@
       <main>
           <section class="projects" id="projects">
             <div class="clearfix"></div>
-              <div class="left">
+              <div class="left"><a href="images/case-haiti.pdf">
                   <div class="left-text">
                       <h2>Social Innovation</h2>
                       <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
-                        financial inclusion in rural areas in Haiti.</h3>
-                      <a href="images/case-haiti.pdf"><h4>Learn more.</h4></a>
+                        financial inclusion in rural areas in Haiti.</h3></a>
+                      <a href="images/case-haiti.pdf"><h4>See more.</h4></a>
                   </div>
                   <div class="left-img">
                       <a href="images/case-haiti.pdf"><img src="images/digicellbg.png"></a>
@@ -69,7 +69,7 @@
                       <h2>Brand Identity</h2>
                       <h3 id="project-desc">Designing the brand & website for a small
                         business in Washington, DC</h3>
-                      <a href="rfs.html"><h4>Learn more.</h4></a>
+                      <a href="rfs.html"><h4>See more.</h4></a>
                   </div>
               </div>
               <div class="left">
@@ -77,7 +77,7 @@
                       <h2>Website Redesign</h2>
                       <h3 id="project-desc">Creating a brand and website from
                         scratch. This was part of the Design bootcamp with Bloc.io.</h3>
-                      <a href="coop.html"><h4>Learn more.</h4></a>
+                      <a href="coop.html"><h4>See more.</h4></a>
                   </div>
                   <a href="coop.html"><img src="images/coop/coop-home.png"></a>
           </section>
