--- a/home.html
+++ b/home.html
@@ -52,11 +52,11 @@
       <main>
           <section class="projects" id="projects">
             <div class="clearfix"></div>
-              <div class="left"><a href="images/case-haiti.pdf">
+              <div class="left">
                   <div class="left-text">
                       <h2>Social Innovation</h2>
                       <h3 id="project-desc">Co-creating with USAID for grassroots innovation in
-                        financial inclusion in rural areas in Haiti.</h3></a>
+                        financial inclusion in rural areas in Haiti.</h3>
                       <a href="images/case-haiti.pdf"><h4>See more.</h4></a>
                   </div>
                   <div class="left-img">
