Updated temp landing page with new location information.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
               </nav>
               <section class="hero">
                 <div class="hero-text" id="container">
-                  <h2>Ciao, call me <r>Rose</r>.</h2>
+                  <h2>Call me <r>Rose</r>.</h2>
                   <p>
-                  <h1>Strategist <r>&</r> Business Developer</h1>
+                  <h1>Business Designer <r>&</r> Developer</h1>
                   <p>
-                  <p>Based in Milan, I’m studying business in the city of design.
+                  <p>Based in NYC.
                     Creative by nature, business strategist & developer by training.
                     I enjoy helping companies & governments find solutions to better
                     serve their customers or constituents.</p>
@@ -126,7 +126,7 @@
 
           <section id="contact">
               <div class="contact-text">
-                  <h2>Say ciao! I'm available for freelance work & Milan recommendations.</h2>
+                  <h2>Let's chat.</h2>
               </div>
               <div class="clearfix"></div>
           </section>
