Flower wasn't showing up on noniphone, should be fixed now. also fixed some responsive elements to have the hero take up the whole screen upon entering the site.

--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                       have 8+ years’ experience designing & writing proposals and
                       managing cross-functional teams. Now, I’m freelancing in design
                       ops, business design, and marketing.</h3>
-                <div class="hero">
+                </div>
             </section>
       </header>
       <main>
